Kubernetes/Azure/configure/helloworld/helloworld_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example
  labels:
    istio-injection: enabled
