Kubernetes/Azure/configure/helloworld/helloworld_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v1
  namespace: example
  labels:
    app: helloworld-v1
spec:
  ports:
  - name: http
    port: 8000
  selector:
    app: helloworld-v1
