Kubernetes/Azure/configure/helloworld/helloworld_gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: helloworld-v1-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP
    hosts:
    # Namespace/VirtualServiceHost
    - "example/eu-example-01.westeurope.cloudapp.azure.com"
