Kubernetes/Azure/configure/helloworld/helloworld.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example
  labels:
    istio-injection: enabled
    ns: example
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v1
  namespace: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-v1
      version: v1
  template:
    metadata:
      labels:
        app: helloworld-v1
        version: v1
    spec:
      containers:
      - name: helloworld
        image: crccheck/hello-world
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v1
  namespace: example
  labels:
    app: helloworld-v1
spec:
  ports:
  - name: http
    port: 8000
  selector:
    app: helloworld-v1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloworld-v1
  namespace: example
spec:
  hosts:
  - eu-example-01.westeurope.cloudapp.azure.com
  - helloworld-v1.example.svc.cluster.local
  gateways:
  - istio-ingress/helloworld-v1-gateway
  - mesh
  http:
  - match:
    - port: 80
    route:
    - destination:
        port:
          number: 8000
        host: helloworld-v1.example.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: helloworld-v1-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP
    hosts:
    # Namespace/VirtualServiceHost
    - "example/eu-example-01.westeurope.cloudapp.azure.com"
---
