Kubernetes/Azure/configure/helloworld/helloworld_virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloworld-v1
  namespace: example
spec:
  hosts:
  - eu-example-01.westeurope.cloudapp.azure.com
  - helloworld-v1.example.svc.cluster.local
  gateways:
  - istio-system/helloworld-v1-gateway
  - mesh
  http:
  - match:
    - port: 80
    route:
    - destination:
        port:
          number: 8000
        host: helloworld-v1.example.svc.cluster.local
