Kubernetes/Azure/configure/helloworld/networkpolicy_examplev1examplev2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-example-v1-to-example-v2
  namespace: example-v1
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          ns: example-v2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-example-v2-to-example-v1
  namespace: example-v2
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          ns: example-v1
